--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,15 @@ STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_PUBLISHABLE_KEY="pk_test_..."
 STRIPE_WEBHOOK_SECRET="whsec_..."
 
+# AI Providers
+GEMINI_API_KEY="your-gemini-api-key"
+ANTHROPIC_API_KEY="your-anthropic-api-key"
+OPENAI_API_KEY="your-openai-api-key"
+
+# AI Configuration
+AI_PRIMARY_PROVIDER="gemini"  # gemini, anthropic, or openai
+AI_FALLBACK_ENABLED="true"
+FREE_QUERY_LIMIT="3"  # Number of free queries for anonymous users
+
 # App
 NODE_ENV="development"
